// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useElementPositionAndSize should return calculated value 1`] = `
<div>
  {"x":100,"y":100,"width":100,"height":100}
</div>
`;

exports[`useElementPositionAndSize should return initial value 1`] = `
<div>
  {"x":0,"y":0,"width":0,"height":0}
</div>
`;
